--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <button class="menu-toggle" type="button" aria-expanded="false" aria-controls="mobile-menu"
                         data-menu-open>
                         <svg class="menu-toggle__icon" width="24" height="16">
-                            <use href="./images/icons.svg#icon-open"></use>
+                            <use href="./images/sprite.svg#icon-open"></use>
                         </svg>
                     </button>
                 </div>
@@ -72,7 +72,7 @@
         <div class="mobile-menu" id="mobile-menu" data-menu>
             <button class="menu-toggle" type="button" data-menu-close>
                 <svg class="menu-toggle__icon" width="24" height="16">
-                    <use href="./images/icons.svg#icon-close_24px"></use>
+                    <use href="./images/sprite.svg#icon-close"></use>
                 </svg>
             </button>
 
@@ -659,7 +659,7 @@
         <div class="modal">
             <button class="button-close button-close--decor" type="button" data-modal-close>
                 <svg class="button-close__icon" width="18" height="18">
-                    <use href="./images/icons.svg#icon-close"></use>
+                    <use href="./images/sprite.svg#icon-close"></use>
                 </svg>
             </button>
 
@@ -669,7 +669,7 @@
                     <span class="form__label">Имя</span>
                     <input class="form__input" type="text" name="name" />
                     <svg class="form__icon" width="18" height="18">
-                        <use href="./images/icons.svg#icon-person"></use>
+                        <use href="./images/sprite.svg#icon-person"></use>
                     </svg>
                 </label>
 
@@ -677,7 +677,7 @@
                     <span class="form__label">Телефон</span>
                     <input class="form__input" type="tel" name="tel" />
                     <svg class="form__icon" width="18" height="18">
-                        <use href="./images/icons.svg#icon-phone"></use>
+                        <use href="./images/sprite.svg#icon-phone"></use>
                     </svg>
                 </label>
 
@@ -685,7 +685,7 @@
                     <span class="form__label">Почта</span>
                     <input class="form__input" type="email" name="email" />
                     <svg class="form__icon" width="18" height="18">
-                        <use href="./images/icons.svg#icon-email"></use>
+                        <use href="./images/sprite.svg#icon-email"></use>
                     </svg>
                 </label>
 
@@ -697,7 +697,7 @@
                 <label class="form__field checkbox">
                     <input class="checkbox visually-hidden" type="checkbox" name="policy" />
                     <svg class="checkbox__icon" width="16" height="15">
-                        <use href="./images/icons.svg#icon-check"></use>
+                        <use href="./images/sprite.svg#icon-check"></use>
                     </svg>
                     <span class="checkbox__label">Соглашаюсь с рассылкой и принимаю &nbsp;
                         <a class="checkbox__policy checkbox__policy--decor-link" href="">Условия договора</a>
