--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                     <button class="button subscribe__button">
                         Подписаться
                         <svg class="subscribe__icon" width="24" height="24">
-                            <use href="./images/icons.svg#icon-send"></use>
+                            <use href="./images/sprite.svg#icon-send"></use>
                         </svg>
                     </button>
                 </form>
