--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                     <button class="menu-toggle" type="button" aria-expanded="false" aria-controls="mobile-menu"
                         data-menu-open>
                         <svg class="menu-toggle__icon" width="24" height="16">
-                            <use href="./images/icons.svg#icon-open"></use>
+                            <use href="./images/sprite.svg#icon-open"></use>
                         </svg>
                     </button>
                 </div>
@@ -72,7 +72,7 @@
         <div class="mobile-menu" id="mobile-menu" data-menu>
             <button class="menu-toggle" type="button" data-menu-close>
                 <svg class="menu-toggle__icon" width="24" height="16">
-                    <use href="./images/icons.svg#icon-close_24px"></use>
+                    <use href="./images/sprite.svg#icon-close"></use>
                 </svg>
             </button>
 
@@ -570,7 +570,7 @@
                     <button class="button subscribe__button">
                         Подписаться
                         <svg class="subscribe__icon" width="24" height="24">
-                            <use href="./images/icons.svg#icon-send"></use>
+                            <use href="./images/sprite.svg#icon-send"></use>
                         </svg>
                     </button>
                 </form>
